    (caused by the bug 1024 fix, which was not applied to elinks-0.12)
  - critical bug 1009: assertion failure in add_snippets()
    (mostly reverted)
//////////////////////////////////////////////////////////////////////

ELinks 0.12pre5.GIT now:
------------------------

To be released as 0.12pre6 or 0.12rc1.

* major bug 764: Correctly initialize options on big-endian 64-bit
  systems.

Bugs that should be removed from NEWS before the 0.12.0 release:

* critical bug 943: Don't let user JavaScripts call any methods of
  ``elinks.action'' in tabs that do not have the focus.  If a tab was
  closed with ``elinks.action.tab_close'' while it had pop-up windows,
  ELinks could crash; as a precaution, don't allow other actions
  either.  ELinks 0.12pre1 was the first release that supported
  ``elinks.action''.

ELinks 0.12pre5:
----------------

Released on 2009-07-08.

* Debian bug 534835: Check the return values of some SpiderMonkey
  functions, to avoid crashes if out of memory.
* minor bug 1017: To work around HTTP server bugs, disable
  protocol.http.compression by default, until ELinks can report
  decompression errors or automatically retry the connection.
* enhancement: The French translation was updated.

Bugs that should be removed from NEWS before the 0.12.0 release:

* critical bug 1081: To fix crashes caused by different definitions of
  regfree() in TRE and in the system libc, link with TRE before any
  other libraries.  ELinks 0.12pre4 was the first release that had
  this bug.
* Searching for more than one fullwidth (e.g. Japanese) character now
  works.
* bug 1080: Support ``--dump-color-mode'' with ``--dump-charset UTF-8''.
  Neither of those worked before ELinks 0.12pre1.

ELinks 0.12pre4:
----------------

Released on 2009-05-31.  This release also included the changes listed
under ``ELinks 0.11.6'' below.

Incompatibilities:

* Debian build bug 529821: Use ``pkg-config gnutls'' instead of