@@ -222,8 +222,8 @@ parse_set_common(struct option *opt_tree, struct conf_parsing_state *state,
 
 	/* Option name */
 	optname_orig = state->pos.look;
-	while (isident(*state->pos.look) || *state->pos.look == '*'
-	       || *state->pos.look == '.' || *state->pos.look == '+')
+	while (is_option_name_char(*state->pos.look)
+	       || *state->pos.look == '.')
 		state->pos.look++;
 	optname_len = state->pos.look - optname_orig;
 
@@ -410,8 +410,8 @@ parse_unset(struct option *opt_tree, struct conf_parsing_state *state,
 
 	/* Option name */
 	optname_orig = state->pos.look;
-	while (isident(*state->pos.look) || *state->pos.look == '*'
-	       || *state->pos.look == '.' || *state->pos.look == '+')
+	while (is_option_name_char(*state->pos.look)
+	       || *state->pos.look == '.')
 		state->pos.look++;
 	optname_len = state->pos.look - optname_orig;
 
